app/05-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  ports:
    - name: hello-world
      protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: hello-world
